fix tab overflow issue in firefox

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -171,7 +171,7 @@ html, body {
 }
 
 .archive-tab {
-    width: 144.9px;
+    width: 144px;
 }
 
 
